<resources>
    <string name="User_type">User type</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">确定</string>
    <string name="album_view">选择图片</string>
    <string name="all_images">所有图片</string>
    <string name="app_name">Smart Badge</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="badge">Badge</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="card_model_blt">Post-it notes</string>
    <string name="card_model_hot">Hot</string>
    <string name="card_model_rcbg">Daily office</string>
    <string name="card_model_xsk">Student card</string>
    <string name="card_theme_cancel">Cancel</string>
    <string name="card_theme_copy">Copy</string>
    <string name="card_theme_copy_sure">Do you want to copy the selected templates?</string>
    <string name="card_theme_delete">Delete</string>
    <string name="card_theme_delete_sure">Do you want to delete the selected templates?</string>
    <string name="card_theme_edit">Theme editor</string>
    <string name="card_theme_select">Select all</string>
    <string name="card_theme_selected">%s selected</string>
    <string name="card_theme_size">Specification</string>
    <string name="card_theme_sure">Confirm</string>
    <string name="card_theme_unselect">Cancel all</string>
    <string name="card_title_model">Template</string>
    <string name="card_title_theme">My theme</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="confirm">确定</string>
    <string name="confirm_format">%1$s(%2$d/%3$d)</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="crop__done">DONE</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop_load_error">Failed to load the image!</string>
    <string name="crop_title">Adjustment</string>
    <string name="dialog_tip">Hint</string>
    <string name="dialog_tip_cancel">Cancel</string>
    <string name="dialog_tip_info">Change background and rebuild the template?</string>
    <string name="dialog_tip_info1">Discard current template?</string>
    <string name="dialog_tip_info2">Please use the correct badge type</string>
    <string name="dialog_tip_info3">Please make sure the badge is discoverable.</string>
    <string name="dialog_tip_info4">Please reconnect.</string>
    <string name="dialog_tip_info5">Please update again.</string>
    <string name="dialog_tip_ok">Confirm</string>
    <string name="dialog_tip_sure">Confirm</string>
    <string name="double_click_exit">再次点击返回退出程序</string>
    <string name="edit_album">Gallery</string>
    <string name="edit_album_one">Select a picture</string>
    <string name="edit_more">More</string>
    <string name="edit_more_no">No data</string>
    <string name="edit_new">New template</string>
    <string name="edit_new1">New</string>
    <string name="edit_new_cancel">Cancel</string>
    <string name="edit_new_dialog">Choose an option</string>
    <string name="edit_new_nfc">NFC</string>
    <string name="edit_new_size">Specification</string>
    <string name="edit_new_size1">Size</string>
    <string name="edit_new_sure">Confirm</string>
    <string name="edit_photo">Camera</string>
    <string name="edit_photo_one">Take a photo</string>
    <string name="edit_start_close">Close</string>
    <string name="edit_start_color">Color</string>
    <string name="edit_start_nfc">Ready for NFC scan</string>
    <string name="edit_start_nfc_cancel">Cancel</string>
    <string name="edit_start_nfc_tip">Tap the badge to mobile device</string>
    <string name="edit_start_size">Size</string>
    <string name="edit_title">Smart Badge</string>
    <string name="edit_use">Recently used</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="image">图片</string>
    <string name="image_view">单击选择</string>
    <string name="limit_exceeded">最多能选 %d 张</string>
    <string name="logging_in">Logging in...</string>
    <string name="login">Log in</string>
    <string name="login_Guiding">Please select your account</string>
    <string name="login_account">Account</string>
    <string name="login_enterprise">Organization</string>
    <string name="login_error">This account name does not exist or the password is incorrect</string>
    <string name="login_input_acc">Please enter your account name</string>
    <string name="login_input_pwd">Please enter your account password</string>
    <string name="login_language">English</string>
    <string name="login_out">Log out</string>
    <string name="login_out_hint">Are you sure you want to log out?</string>
    <string name="login_password">Password</string>
    <string name="login_person">Individual</string>
    <string name="login_service">Server configuration</string>
    <string name="login_success">Login successful</string>
    <string name="maxnum">最多选择%1$d张图片</string>
    <string name="minnum">最少选择一张图片</string>
    <string name="model_barcode">Barcode</string>
    <string name="model_barcode_edit">Edit</string>
    <string name="model_barcode_style">Style</string>
    <string name="model_barcode_style_bg">Background</string>
    <string name="model_barcode_style_fg">Code color</string>
    <string name="model_barcode_style_select">Do not choose the same color</string>
    <string name="model_bg">Background</string>
    <string name="model_bg_black">Black</string>
    <string name="model_bg_color">Color</string>
    <string name="model_bg_image">Picture</string>
    <string name="model_bg_library">Material library</string>
    <string name="model_bg_red">Red</string>
    <string name="model_bg_white">White</string>
    <string name="model_bg_yellow">Yellow</string>
    <string name="model_image">Picture</string>
    <string name="model_image_album">Gallery</string>
    <string name="model_image_edit">Edit</string>
    <string name="model_image_library">Material library</string>
    <string name="model_image_library_icon">Icon</string>
    <string name="model_image_library_template">Template</string>
    <string name="model_image_photo">Camera</string>
    <string name="model_image_size">Size</string>
    <string name="model_preview">Save + Send</string>
    <string name="model_qrcode">QR code</string>
    <string name="model_qrcode_edit">Edit</string>
    <string name="model_qrcode_style">Style</string>
    <string name="model_qrcode_style_bg">Background</string>
    <string name="model_qrcode_style_fg">Color</string>
    <string name="model_shape">Shape</string>
    <string name="model_shape_style_height">Height</string>
    <string name="model_shape_style_real_virtual">Dashed line</string>
    <string name="model_shape_style_width">Width</string>
    <string name="model_text">Text</string>
    <string name="model_text_edit">Edit</string>
    <string name="model_text_edit_tip">Click to input</string>
    <string name="model_text_font">Font</string>
    <string name="model_text_font_default">Default</string>
    <string name="model_text_style">Style</string>
    <string name="model_text_style_bg">Background</string>
    <string name="model_text_style_bold">Bold</string>
    <string name="model_text_style_color">Color</string>
    <string name="model_text_style_italic">Italic</string>
    <string name="model_text_style_size">Size</string>
    <string name="model_text_style_underline">Underline</string>
    <string name="msg_compress_failed">有压缩失败的图片</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_crop_failed">有裁切失败的图片</string>
    <string name="msg_operation_canceled">操作被取消</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="my_about">About us</string>
    <string name="my_about_sure">Confirm</string>
    <string name="my_about_update">Update content</string>
    <string name="my_about_update_info">"1、Modify the UI interface
2、Add new template editing"</string>
    <string name="my_badge">Electronic Work Badge</string>
    <string name="my_clear">Clear cache</string>
    <string name="my_clear_success">Successful</string>
    <string name="my_introduce">Manual</string>
    <string name="my_introduce_info">Take creating a new template as an example</string>
    <string name="my_language">language</string>
    <string name="my_language_save">Save</string>
    <string name="my_nfc_find">NFC antenna locations for different cell phones</string>
    <string name="my_nfc_huawei">Huawei</string>
    <string name="my_nfc_info">Note: Currently, it may not be able to cover all mobile phone models. It is recommended to consult the official documentation of the mobile phone or contact the manufacturer for details.</string>
    <string name="my_nfc_info1">This module is under reorganization.</string>
    <string name="my_nfc_oppo">oppo</string>
    <string name="my_nfc_sanxing">samsung</string>
    <string name="my_nfc_vivo">vivo</string>
    <string name="my_nfc_xiaomi">Xiaomi</string>
    <string name="my_userinfo">My profile</string>
    <string name="my_username">Username</string>
    <string name="nickname">Nickname</string>
</resources>