<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_so_bai_st_0_co_10" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/sp_16" android:textColor="@android:color/black" android:gravity="center" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_15" android:layout_marginRight="@dimen/dp_15" android:text="@string/dialog_tip" />
        <TextView android:textSize="@dimen/sp_13" android:textColor="@color/text_color_4" android:gravity="center" android:id="@id/tv_info" android:padding="@dimen/dp_5" android:layout_width="fill_parent" android:layout_height="@dimen/dp_90" android:layout_marginLeft="@dimen/dp_15" android:layout_marginTop="@dimen/dp_20" android:layout_marginRight="@dimen/dp_15" android:layout_marginBottom="@dimen/dp_20" android:text="@string/dialog_tip_info" />
        <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0px" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/dp_40">
            <Button android:textSize="@dimen/sp_13" android:textColor="@color/text_color_4" android:id="@id/bt_cancel" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dialog_tip_cancel" android:layout_weight="1.0" />
            <View android:background="@color/line" android:layout_width="1.0px" android:layout_height="fill_parent" />
            <Button android:textSize="@dimen/sp_13" android:textColor="@color/device" android:id="@id/bt_sure" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/dialog_tip_sure" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
