<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_dialog_so_bai_st_0_co_12" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:padding="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="@dimen/dp_50">
            <TextView android:textSize="@dimen/sp_14" android:textColor="@color/text_color_2" android:gravity="center" android:padding="@dimen/dp_5" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/edit_title" android:layout_centerInParent="true" />
        </RelativeLayout>
        <LinearLayout android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/dp_20" android:paddingEnd="@dimen/dp_20">
            <TextView android:textSize="@dimen/sp_13" android:textColor="@color/text_color_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_start_size" />
            <TextView android:textSize="@dimen/sp_13" android:textColor="@color/text_color_3" android:gravity="end" android:id="@id/tvSize" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/edit_start_size" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/dp_20" android:paddingEnd="@dimen/dp_20">
            <TextView android:textSize="@dimen/sp_13" android:textColor="@color/text_color_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_start_color" />
            <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:id="@id/tvBlack" android:background="@drawable/shape_so_hei_st_0_co_20" android:layout_width="@dimen/dp_15" android:layout_height="@dimen/dp_15" />
                <TextView android:id="@id/tvWhite" android:background="@drawable/shape_so_bai_st_0_co_25" android:layout_width="@dimen/dp_15" android:layout_height="@dimen/dp_15" android:layout_marginStart="@dimen/dp_10" />
                <TextView android:id="@id/tvRed" android:background="@drawable/shape_so_hong_st_0_co_20" android:layout_width="@dimen/dp_15" android:layout_height="@dimen/dp_15" android:layout_marginStart="@dimen/dp_10" />
                <TextView android:id="@id/tvYellow" android:background="@drawable/shape_so_huang_st_0_co_20" android:layout_width="@dimen/dp_15" android:layout_height="@dimen/dp_15" android:layout_marginStart="@dimen/dp_10" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="#fff5f7f9" android:paddingTop="@dimen/dp_25" android:paddingBottom="@dimen/dp_25" android:layout_width="fill_parent" android:layout_height="@dimen/dp_230" android:paddingStart="@dimen/dp_15" android:paddingEnd="@dimen/dp_15">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearNew" android:background="@drawable/shape_so_bai_st_0_co_15" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginEnd="@dimen/dp_10">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/edit_new" />
                <TextView android:textSize="@dimen/sp_13" android:textColor="@color/text_color_3" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_25" android:text="@string/edit_new" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <RelativeLayout android:id="@id/linearPhoto" android:background="@drawable/shape_so_bai_st_0_co_15" android:padding="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="@dimen/dp_10" android:layout_weight="1.0">
                    <TextView android:background="@drawable/shape_gradient" android:layout_width="@dimen/dp_26" android:layout_height="@dimen/dp_5" android:layout_marginTop="@dimen/dp_15" />
                    <TextView android:textSize="@dimen/sp_13" android:textColor="@color/text_color_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_photo" />
                    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/text_color_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/edit_photo_one" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/edit_photo" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" />
                </RelativeLayout>
                <RelativeLayout android:id="@id/linearAlbum" android:background="@drawable/shape_so_bai_st_0_co_15" android:padding="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
                    <TextView android:background="@drawable/shape_gradient" android:layout_width="@dimen/dp_26" android:layout_height="@dimen/dp_5" android:layout_marginTop="@dimen/dp_15" />
                    <TextView android:textSize="@dimen/sp_13" android:textColor="@color/text_color_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_album" />
                    <TextView android:textSize="@dimen/sp_12" android:textColor="@color/text_color_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_20" android:text="@string/edit_album_one" />
                    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/edit_album" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/text_color_3" android:gravity="center" android:id="@id/tvCancel" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_15" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/edit_start_nfc_cancel" />
    </LinearLayout>
</LinearLayout>
