<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_dialog_so_bai1_st_0_co_12" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/sp_18" android:textColor="@color/text_color_3" android:gravity="center" android:background="@drawable/shape_so_bai_st_0_co_10_tl_tr" android:paddingTop="@dimen/dp_16" android:paddingBottom="@dimen/dp_16" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_new_dialog" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/dp_200" android:layout_margin="@dimen/dp_16">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearNew" android:background="@drawable/shape_so_bai_st_0_co_10" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageView android:background="@mipmap/nfc" android:layout_width="@dimen/dp_64" android:layout_height="@dimen/dp_64" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="@color/text_color_3" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/edit_new_nfc" />
            </LinearLayout>
            <View android:layout_width="@dimen/dp_13" android:layout_height="fill_parent" />
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearNew1" android:background="@drawable/shape_so_bai_st_0_co_10" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:textSize="@dimen/sp_36" android:textStyle="bold" android:textColor="#fff66821" android:gravity="center" android:layout_width="fill_parent" android:layout_height="@dimen/dp_64" android:text="3.7" />
                <TextView android:textSize="@dimen/sp_16" android:textColor="@color/text_color_3" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:text="@string/edit_new_size1" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/text_color_3" android:gravity="center" android:id="@id/textCancel" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_50" android:text="@string/edit_new_cancel" />
    </LinearLayout>
</LinearLayout>
