<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/shape_dialog_so_bai_st_0_co_12" android:layout_width="fill_parent" android:layout_height="@dimen/dp_230">
        <RelativeLayout android:padding="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/text_color_6" android:id="@id/tvCancel" android:background="?selectableItemBackground" android:padding="@dimen/dp_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_new_cancel" android:layout_centerVertical="true" />
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/text_color_3" android:padding="@dimen/dp_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_new_size" android:layout_centerInParent="true" android:layout_centerVertical="true" />
            <TextView android:textSize="@dimen/sp_16" android:textColor="@color/device" android:id="@id/tvSure" android:background="?selectableItemBackground" android:padding="@dimen/dp_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/edit_new_sure" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="horizontal" android:padding="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <cn.highlight.work_card_write.view.CycleWheelView android:id="@id/wheelViewSize" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
