<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#fff5f6f8" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:background="@color/white" android:paddingTop="@dimen/dp_10" android:paddingBottom="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/dp_12" android:paddingEnd="@dimen/dp_12">
        <TextView android:textSize="@dimen/sp_16" android:textColor="@color/text_color_3" android:id="@id/tvNum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_theme_selected" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/sp_14" android:textColor="@color/device" android:id="@id/tvSelect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_theme_select" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="@dimen/dp_50">
        <LinearLayout android:gravity="center_vertical" android:background="@color/white" android:padding="@dimen/dp_10" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.google.android.material.tabs.TabLayout android:layout_width="0.0dip" android:layout_height="@dimen/dp_30" android:layout_weight="1.0" android:layout_marginEnd="@dimen/dp_10" app:tabIndicatorColor="@null" app:tabIndicatorFullWidth="false" app:tabMode="scrollable" app:tabSelectedTextColor="@color/device" app:tabTextAppearance="@style/TabText" app:tabTextColor="@color/text_color_4">
                <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/card_theme_edit" />
            </com.google.android.material.tabs.TabLayout>
            <LinearLayout android:gravity="center" android:layout_gravity="end" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <TextView android:textSize="@dimen/sp_14" android:textColor="@color/device" android:id="@id/tvSize" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3.7" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/card_select" android:layout_marginStart="@dimen/dp_5" />
            </LinearLayout>
        </LinearLayout>
        <ImageView android:background="#66ffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/themeRecyclerView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/dp_3" android:layout_weight="1.0" android:layout_marginStart="@dimen/dp_8" android:layout_marginEnd="@dimen/dp_16" />
    <RelativeLayout android:gravity="center_vertical" android:background="@drawable/shape_so_bai_st_0_co_10_tl_tr" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearCancel" android:layout_width="@dimen/dp_78" android:layout_height="@dimen/dp_78">
            <ImageView android:background="@mipmap/card_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/text_color_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_7" android:text="@string/card_theme_cancel" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearCopy" android:layout_width="@dimen/dp_78" android:layout_height="@dimen/dp_78" android:layout_marginEnd="@dimen/dp_80" android:layout_alignParentEnd="true">
            <ImageView android:id="@id/imageCopy" android:background="@mipmap/copy" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/text_color_6" android:id="@id/tvCopy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_7" android:text="@string/card_theme_copy" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearDelete" android:layout_width="@dimen/dp_78" android:layout_height="@dimen/dp_78" android:layout_alignParentEnd="true">
            <ImageView android:id="@id/imageDelete" android:background="@mipmap/delete1" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="@dimen/sp_12" android:textColor="@color/text_color_6" android:id="@id/tvDelete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_7" android:text="@string/card_theme_delete" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
